modules/security/main.tf
resource "aws_security_group" "web" {
  name        = "${var.environment}-web-sg"
  description = "Allow inbound traffic"
  vpc_id      = var.vpc_id

  tags = {
    Name = "${var.environment}-web-sg"
  }
}

resource "aws_vpc_security_group_ingress_rule" "web_http" {
  security_group_id = aws_security_group.web.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  to_port           = 80
}

resource "aws_vpc_security_group_ingress_rule" "web_https" {
  security_group_id = aws_security_group.web.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  ip_protocol       = "tcp"
  to_port           = 443
}

resource "aws_vpc_security_group_ingress_rule" "web_ssh" {
  security_group_id = aws_security_group.web.id
  cidr_ipv4         = var.allowed_ssh_cidr
  from_port         = 22
  ip_protocol       = "tcp"
  to_port           = 22
}

resource "aws_vpc_security_group_egress_rule" "web_all_traffic" {
  security_group_id = aws_security_group.web.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
}

resource "aws_security_group" "private" {
  name            = "${var.environment}-private-sg"
  description     = "Allow web traffic"
  vpc_id          = var.vpc_id

  ingress {
    security_groups = [aws_security_group.web.id]
  }

  tags = {
    Name = "${var.environment}-private-sg"
  }
}
